--- a/style.css
+++ b/style.css
@@ -3,11 +3,10 @@
 
 html{
     background: linear-gradient(#c7c3d3, #6a5d83);
-    font-family: Roboto, sans-serif;
     font-size: 1.5em;
     /* color:rgb(31, 39, 143); */
     color: white;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     min-height: 100vh;
     max-width: 550px;
     margin: 0 auto;
